fix group label in collapsed panel

--- a/src/leaflet-panel-layers.css
+++ b/src/leaflet-panel-layers.css
@@ -50,7 +50,8 @@
 	display: block;
 }
 .leaflet-panel-layers:not(.expanded) .leaflet-panel-layers-title > span,
-.leaflet-panel-layers:not(.expanded) .leaflet-panel-layers-selector {
+.leaflet-panel-layers:not(.expanded) .leaflet-panel-layers-selector,
+.leaflet-panel-layers:not(.expanded) .leaflet-panel-layers-grouplabel {
     display: none;
 }
 .leaflet-panel-layers-separator {
